--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "com.example.mihai.realplay"
-        minSdkVersion 22
+        minSdkVersion 20
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -26,4 +26,14 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+
+    //Image Handling
+    compile 'com.isseiaoki:simplecropview:1.0.16'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+
+    //Facebook SDK
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+
+
 }
