--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,9 @@ dependencies {
     //Facebook SDK
     compile 'com.facebook.android:facebook-android-sdk:4.+'
 
+    compile 'com.google.code.gson:gson:2.6.1'
 
+
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
 }
