--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -24,20 +25,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    testCompile 'junit:junit:4.12'
 
-    //Image Handling
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.isseiaoki:simplecropview:1.0.16'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-
-    //Facebook SDK
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
-
     compile 'com.google.code.gson:gson:2.6.1'
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta1'
+    compile 'com.android.support:design:24.2.1'
+    testCompile 'junit:junit:4.12'
 
-
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    //butter knife
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
